@@ -1,3 +1,7 @@
+[B]Version 0.3.6 - 28 Oct 2016[/B]
+- Mersalaayitten fix
+- Categories in Live Malayalam TV
+
 [B]Version 0.3.5 - 11 Oct 2016[/B]
 - Make Kodi 15 compatible
 - Make Tamilyogi Scraper compatible on Android
